--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,22 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Create local properties
+        run: |
+          touch local.properties
+          echo GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} > local.properties
+          cat local.properties
+
       - name: Build with gradle
         run: ./gradlew build
+
+      - name: Upload to GoogleDrive
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.CREDENTIALS }}
+          filename: "app-debug.apk"
+          folderId: ${{ secrets.FOLDER_ID }}
+          overwrite: "true"
+          
+          
     
