--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,19 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4.5.0
@@ -38,27 +24,29 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Create local properties
+      - name: Create local.properties
         run: |
-          touch local.properties
-          echo GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} > local.properties
+          echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > local.properties
           cat local.properties
 
-      - name: Create google-services.json
+      - name: Set up google-services.json
         run: |
           echo "${{ secrets.GS_CREDENTIALS }}" | base64 -d > ./app/google-services.json
+        shell: bash
 
+      - name: Validate google-services.json
+        run: |
+          cat ./app/google-services.json
+          jq '.' ./app/google-services.json
+        shell: bash
 
-      - name: Build with gradle
-        run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build --stacktrace --info
 
-      - name: Upload to GoogleDrive
+      - name: Upload to Google Drive
         uses: adityak74/google-drive-upload-git-action@main
         with:
           credentials: ${{ secrets.CREDENTIALS }}
           filename: "app-debug.apk"
           folderId: ${{ secrets.FOLDER_ID }}
           overwrite: "true"
-          
-          
-    
