--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         uses: adityak74/google-drive-upload-git-action@main
         with:
           credentials: ${{ secrets.CREDENTIALS }}
-          filename: "app-debug.apk"
+          filename: "./app/build/outputs/apk/debug/app-debug.apk"
           folderId: ${{ secrets.FOLDER_ID }}
           overwrite: "true"
 
@@ -69,4 +69,4 @@ jobs:
         with:
           files: ./app/build/outputs/apk/debug/app-debug.apk
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GTHB_TOKEN }}
