--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,16 @@ jobs:
           folderId: ${{ secrets.FOLDER_ID }}
           overwrite: "true"
 
+      - name: Create and Push Tag
+        run: |
+          VERSION="v$(date +'%Y.%m.%d')"
+          git tag $VERSION
+          git push origin $VERSION
 
       - name: Upload APK to GitHub Releases
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.create_and_push_tag.outputs.VERSION }} 
           files: ./app/build/outputs/apk/debug/app-debug.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GTHB_TOKEN }}
